--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="utf-8">
     <title>Rock Paper Scissors</title>
     <script src="scripts.js"></script>
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
-    
+    <div class="matchup container">
+      <img class="player" src="imgs/man-on-computer.png" alt="A man staring intently at the computer (from Irasutoya).">
+      <img class="computer" src="imgs/robot.png" alt="A robot using a computer. (from Irasutoya).">
+    </div>
+    <div class="selection container">
+      <button class="player-selection rock"><img src="imgs/rock.png" alt="Hand gesture of &ldquo;rock&rdquo; (from Irasutoya).">Rock</button>
+      <button class="player-selection paper"><img src="imgs/paper.png" alt="Hand gesture of &ldquo;paper&rdquo; (from Irasutoya).">Paper</button>
+      <button class="player-selection scissors"><img src="imgs/scissors.png" alt="Hand gesture of &ldquo;scissors&rdquo; (from Irasutoya).">Scissors</button>
+    </div>
   </body>
 </html>
