--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Rock Paper Scissors</title>
     <script src="scripts.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;400;500&display=swap" rel="stylesheet"> 
   </head>
 
   <body>
