Change class names for selection buttons and images
This is done to utilize the className property in js to retrieve
the "value" of the buttons. The class name had to be on the buttons
and images so all clicks within the button are valid.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Rock Paper Scissors</title>
-    <script src="scripts.js"></script>
+    <script src="scripts.js" defer></script>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;400;500&display=swap" rel="stylesheet"> 
   </head>
@@ -14,9 +14,9 @@
       <img class="computer" src="imgs/robot.png" alt="A robot using a computer. (from Irasutoya).">
     </div>
     <div class="selection container">
-      <button class="player-selection rock"><img src="imgs/rock.png" alt="Hand gesture of &ldquo;rock&rdquo; (from Irasutoya).">Rock</button>
-      <button class="player-selection paper"><img src="imgs/paper.png" alt="Hand gesture of &ldquo;paper&rdquo; (from Irasutoya).">Paper</button>
-      <button class="player-selection scissors"><img src="imgs/scissors.png" alt="Hand gesture of &ldquo;scissors&rdquo; (from Irasutoya).">Scissors</button>
+      <button class="rock"><img class="rock" src="imgs/rock.png" alt="Hand gesture of &ldquo;rock&rdquo; (from Irasutoya).">Rock</button>
+      <button class="paper"><img class="paper" src="imgs/paper.png" alt="Hand gesture of &ldquo;paper&rdquo; (from Irasutoya).">Paper</button>
+      <button class="scissors"><img class="scissors" src="imgs/scissors.png" alt="Hand gesture of &ldquo;scissors&rdquo; (from Irasutoya).">Scissors</button>
     </div>
   </body>
 </html>
