--- a/index.html
+++ b/index.html
@@ -10,9 +10,22 @@
 
   <body>
     <div class="matchup container">
-      <img class="player" src="imgs/man-on-computer.png" alt="A man staring intently at the computer (from Irasutoya).">
-      <img class="computer" src="imgs/robot.png" alt="A robot using a computer. (from Irasutoya).">
+      <div class="player-side">
+        <div class="move-history">Player</div>
+        <div>
+          <p class="player-score">0</p>
+          <img class="player-img" src="imgs/man-on-computer.png" alt="A man staring intently at the computer (from Irasutoya).">
+        </div>
+      </div>
+      <div class="computer-side">
+        <div>
+          <p class="computer-score">0</p>
+          <img class="computer-img" src="imgs/robot.png" alt="A robot using a computer. (from Irasutoya).">
+        </div>
+        <div class="move-history">Computer</div>
+      </div>
     </div>
+    <div class="output container"></div>
     <div class="selection container">
       <button class="rock"><img class="rock" src="imgs/rock.png" alt="Hand gesture of &ldquo;rock&rdquo; (from Irasutoya).">Rock</button>
       <button class="paper"><img class="paper" src="imgs/paper.png" alt="Hand gesture of &ldquo;paper&rdquo; (from Irasutoya).">Paper</button>
