Add tie counter and placeholder for output box

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <img class="player-img" src="imgs/man-on-computer.png" alt="A man staring intently at the computer (from Irasutoya).">
         </div>
       </div>
+      <p class="tie-score">Ties: 0</p>
       <div class="computer-side">
         <div>
           <p class="computer-score">0</p>
@@ -25,7 +26,7 @@
         <div class="move-history">Computer</div>
       </div>
     </div>
-    <div class="output container"></div>
+    <div class="output container">Make your selection...</div>
     <div class="selection container">
       <button class="rock"><img class="rock" src="imgs/rock.png" alt="Hand gesture of &ldquo;rock&rdquo; (from Irasutoya).">Rock</button>
       <button class="paper"><img class="paper" src="imgs/paper.png" alt="Hand gesture of &ldquo;paper&rdquo; (from Irasutoya).">Paper</button>
